pics, sound etc

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <body>
 
     <header class="header">
-        <h1>Going To The Store</h1>
+       <div class="headTextContainer">
+        <h1 class="headText">Going To The Store</h1>
         <p class="beginningText">Lets go shopping! <br>
-           Remember every item on the list and pick the right ones. </p>
+           Remember every item on the list and pick the right ones. <br>
+           Finish all 4 levels to be the ultimate grocery shopper! </p>
+       </div>
     </header>
 
     <section class="buttonContainer">
-        <button class="goButton">Go!</button>
-        <button class="againButton">Start Over</button>
-        <button class="continueButton">Continue</button>
+    
+        <button class="goButton startButtons">Go!</button>
+        <button class="againButton startButtons">Start Over</button>
+        <button class="continueButton startButtons">Continue</button>
+   
     </section>
 
 
